--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -136,6 +136,7 @@ header {
                 <img src="https://img.youtube.com/vi/d2ieE_A0sig/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
             </div>
+            <br> <p> Julia Wolf - Last summer <br> Editor/VFX Artist (After Effects)</p>
         </div>
 
         <br>
@@ -144,14 +145,17 @@ header {
             <div class="video-thumb" data-id="XeSTwjLBc_k">
                 <img src="https://img.youtube.com/vi/XeSTwjLBc_k/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
+                <br> <p> Minh - Gemini <br> Lead VFX Artist/Mixed Media (DaVinci Resolve) </p>
             </div>
             <div class="video-thumb" data-id="SCnWPXLBtg4">
                 <img src="https://img.youtube.com/vi/SCnWPXLBtg4/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
+                <br> <p> Overtonight - Summer '22 <br> Lead VFX Artist/Mixed Media (DaVinci Resolve) </p>
             </div>
             <div class="video-thumb" data-id="cKSayjL4vqY">
                 <img src="https://img.youtube.com/vi/cKSayjL4vqY/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
+                <br> <p> Mercyyy - Comedy <br> Editor/VFX Artist (Datamosh2, After Effects) </p>
             </div>
             <div class="video-thumb" data-id="14ZFh-SFIrU">
                 <img src="https://img.youtube.com/vi/14ZFh-SFIrU/hqdefault.jpg" alt="Video Thumbnail">
