--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -128,15 +128,18 @@ header {
 
 <div id="container">
     <header><h1>PORTFOLIO ✩♬₊˚.</h1></header>
-
+    
     <div class="section">
         <h2>client work ✦</h2>
         <div class="video-container full-width-video">
             <div class="video-thumb" data-id="d2ieE_A0sig">
                 <img src="https://img.youtube.com/vi/d2ieE_A0sig/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
+                <p class="video-caption">
+                    Julia Wolf - Last Summer
+                    <br> Editor/VFX Artist (After Effects)
+                </p>
             </div>
-            <br> <p> Julia Wolf - Last summer <br> Editor/VFX Artist (After Effects)</p>
         </div>
 
         <br>
@@ -145,21 +148,33 @@ header {
             <div class="video-thumb" data-id="XeSTwjLBc_k">
                 <img src="https://img.youtube.com/vi/XeSTwjLBc_k/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
-                <br> <p> Minh - Gemini <br> Lead VFX Artist/Mixed Media (DaVinci Resolve) </p>
+                <p class="video-caption">
+                    Minh - Gemini [Directed By NX2Photography]
+                    <br> VFX/Mixed Media (DaVinci Resolve)
+                </p>
             </div>
             <div class="video-thumb" data-id="SCnWPXLBtg4">
                 <img src="https://img.youtube.com/vi/SCnWPXLBtg4/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
-                <br> <p> Overtonight - Summer '22 <br> Lead VFX Artist/Mixed Media (DaVinci Resolve) </p>
+                <p class="video-caption">
+                    Overtonight - Summer '22 [Directed by NX2Photography]
+                    <br> VFX/Mixed Media (DaVinci Resolve)
+                </p>
             </div>
             <div class="video-thumb" data-id="cKSayjL4vqY">
                 <img src="https://img.youtube.com/vi/cKSayjL4vqY/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
-                <br> <p> Mercyyy - Comedy <br> Editor/VFX Artist (Datamosh2, After Effects) </p>
+                <p class="video-caption">
+                    Mercyyy - Comedy
+                    <br> Lead Editor/VFX (Datamosh 2, After Effects, Blender)
+                </p>
             </div>
             <div class="video-thumb" data-id="14ZFh-SFIrU">
                 <img src="https://img.youtube.com/vi/14ZFh-SFIrU/hqdefault.jpg" alt="Video Thumbnail">
                 <button>▶</button>
+                <p class="video-caption">
+                    Attic - MerkMusik
+                    <br> Director, Lead Editor/VFX (After Effects)
             </div>
         </div>
 
@@ -174,15 +189,27 @@ header {
         <div class="video-container">
             <div class="video-thumb" data-id="BtTgIKe6oH4">
                 <img src="https://img.youtube.com/vi/BtTgIKe6oH4/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+                <p class="video-caption">
+                    Setting Sail - A Short Film by Wassim*
+                    <br> Director/Actor/Storyboard/Editor/Grading (DaVinci Resolve, Premiere Pro, Blender, After Effects)
             </div>
             <div class="video-thumb" data-id="Odq5tLtPDXk">
                 <img src="https://img.youtube.com/vi/Odq5tLtPDXk/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+                <p class="video-caption">
+                    Sixteen - A Short Film by Wassim*
+                    <br> Director/Actor/Editor/Grading (Premiere Pro)
             </div>
             <div class="video-thumb" data-id="kTOCtqsrNJg">
                 <img src="https://img.youtube.com/vi/kTOCtqsrNJg/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+                <p class="video-caption">
+                    Ending - A Short Film by Wassim*
+                    <br> Storyboard/Director/Actor/Editor/Sound Design/Compositing (After Effects, Nuke, DaVinci Resolve)
             </div>
             <div class="video-thumb" data-id="Jpbkw4Jb3UE">
                 <img src="https://img.youtube.com/vi/Jpbkw4Jb3UE/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+                <p class="video-caption">
+                    University Storyboard Project
+                    <br> Storyboard/Sound Design/Editor/VFX (After Effects, FL Studio, Logic Pro, Nuke)
             </div>
         </div>
     </div>
@@ -204,6 +231,9 @@ header {
             </div>
             <div class="video-thumb" data-id="wZRUUuK1sow">
                 <img src="https://img.youtube.com/vi/wZRUUuK1sow/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
+            </div>
+            <div class="video-thumb" data-id="W0MfcbnqJ6c">
+                <img src="https://img.youtube.com/vi/W0MfcbnqJ6c/hqdefault.jpg" alt="Video Thumbnail"><button></button>
             </div>
         </div>
     </div>
