--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,6 +29,13 @@ body {
 }
 @keyframes fadeIn { to { opacity: 1; } }
 
+.video-caption {
+    text-align: center;
+    font-size: 0.9rem;
+    color: #000;
+    margin-top: 5px;
+}
+
 #container {
     width: 90%;
     max-width: 1040px;
