--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -230,6 +230,24 @@ header {
         <h2>practice ♡</h2>
         <div class="video-container">
             <div class="video-item">
+                <div class="video-thumb" data-id="W0MfcbnqJ6c">
+                    <img src="https://img.youtube.com/vi/W0MfcbnqJ6c/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption">Nuke Parallax 3D Camera Practice</p>
+            </div>
+            <div class="video-item">
+                <div class="video-thumb" data-id="oxX3r0MXoHU">
+                    <img src="https://img.youtube.com/vi/oxX3r0MXoHU/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption">Maya 3D Animation Practice<br>Modelling/UV Unwrap/Animation</p>
+            </div>
+            <div class="video-item">
+                <div class="video-thumb" data-id="MZumIOJzseg">
+                    <img src="https://img.youtube.com/vi/MZumIOJzseg/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption"> Storyboard/Animatic Work <br> Pre-Production for <a href="https://youtu.be/Jpbkw4Jb3UE" target="_blank">this!</a></p>
+            </div>
+            <div class="video-item">
                 <div class="video-thumb" data-id="jU_VXxyQY9s">
                     <img src="https://img.youtube.com/vi/jU_VXxyQY9s/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
                 </div>
@@ -240,6 +258,12 @@ header {
                     <img src="https://img.youtube.com/vi/fQbPsBAEP34/hqdefault.jpg" alt="Video Thumbnail"><button>▶</button>
                 </div>
                 <p class="video-caption">Mixed Media Practice 2</p>
+            </div>
+            <div class="video-item">
+                <div class="video-thumb" data-id="ffqGF-AGiCE">
+                    <img src="https://img.youtube.com/vi/ffqGF-AGiCE/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption">Mixed Media Practice 3</p>
             </div>
             </div>
         </div>
