--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -194,6 +194,24 @@ header {
     </div>
 
     <div class="section">
+        <h2>URLFESTS/CONCERT VISUALS</h2>
+        <div class="video-container">
+            <div class="video-item">
+                <div class="video-thumb" data-id="edzx97fzNDg">
+                    <img src="https://img.youtube.com/vi/edzx97fzNDg/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption">Channel 25 URLFEST - Day 1<br>Graphics/VFX/Live Set Visuals (After Effects, Premiere Pro, DaVinci Resolve, Blender)</p>
+            </div>
+            <div class="video-item">
+                <div class="video-thumb" data-id="jeztuk8G_GE">
+                    <img src="https://img.youtube.com/vi/jeztuk8G_GE/hqdefault.jpg" alt="Video Thumbnail"><button></button>
+                </div>
+                <p class="video-caption">Channel 25 URLFEST - Day 2<br>Graphics/VFX/Live Set Visuals (After Effects, Premiere Pro, DaVinci Resolve, Blender)</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
         <h2>personal projects ☁︎</h2>
         <div class="video-container">
             <div class="video-item">
