--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -224,9 +224,9 @@ header {
   <nav id="sidebar">
     <h3>Navigation</h3>
     <a href="../index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="#client-work">Client Work</a>
-    <a href="#personal-projects">Personal Projects</a>
+    <a href="portfolio/">Portfolio</a>
+    <a href="projects/">Organisations/Projects</a>
+    <a href="blog/">Blog</a>
 
     <div class="update-board">
       <h4>Website Update Board</h4>
