--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,6 @@ body {
 
 @keyframes fadeIn { to { opacity: 1; } }
 
-/* Page layout wrapper */
 .page-wrapper {
   display: flex;
   justify-content: center;
@@ -41,7 +40,6 @@ body {
   box-sizing: border-box;
 }
 
-/* Sidebar styling */
 #sidebar {
   width: 220px;
   background: rgba(123, 155, 210, 0.65);
@@ -83,7 +81,6 @@ body {
   text-shadow: 0 0 6px rgba(74, 83, 255, 0.6);
 }
 
-/* Update board */
 .update-board {
   margin-top: 20px;
   background: rgba(131, 165, 224, 0.55);
@@ -103,7 +100,6 @@ body {
   padding-bottom: 5px;
 }
 
-/* Main container */
 #container {
   flex: 1;
   max-width: 1040px;
@@ -223,7 +219,7 @@ header {
   <!-- Sidebar -->
   <nav id="sidebar">
     <h3>Navigation</h3>
-    <a href="../index.html">Home</a>
+    <a href="../">Home</a>
     <a href="portfolio/">Portfolio</a>
     <a href="projects/">Organisations/Projects</a>
     <a href="blog/">Blog</a>
