--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <a href="index.html">Home</a>
       <a href="portfolio/">Portfolio</a>
       <a href="projects/">Organisations/Projects</a>
-      <a href="blog/">Blog</a>
+      <a href="blogs/">Blog</a>
 
       <div class="update-board">
         <h4>Website Update Board</h4>
