--- a/blogs/index.html
+++ b/blogs/index.html
@@ -193,7 +193,7 @@
           <br><br>
           Here's a silly photo of me ^w^
           <br>
-          <img src="images/well hello.png" alt="hi there!">
+          <img src="/images/well hello.png" alt="hi there!">
         </p>
       </div>
 
